--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
+    "form-serialize": "^0.7.2",
     "prop-types": "^15.7.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "sort-by": "^1.2.0"
   },
